// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`To Flutter Should generate list of files containing design tokens 1`] = `
[
  {
    "name": "measurements.dart",
    "value": {
      "content": "
import 'dart:ui';

class SpecifyMeasurement {
    SpecifyMeasurement._();

    static const baseSpace01 = 8.00;
    static const baseSpace02 = 16.00;
    static const baseSpace03 = 24.00;
    static const baseSpace04 = 32.00;
    static const baseSpace05 = 64.00;
    static const baseSpace06 = 96.00;
    static const baseSpace07 = 128.00;
    static const baseSpace08 = 160.00;
    static const baseSpace09 = 192.00;
    static const baseSpace10 = 224.00;
}",
    },
  },
  {
    "name": "colors.dart",
    "value": {
      "content": "
import 'dart:ui';

class SpecifyColor {
    SpecifyColor._();

    static const colorsAccent = Color(0xFF7885B7);
    static const colorsAlmostBlack = Color(0xFF1C1C1C);
    static const colorsBlack = Color(0xFF1E212B);
    static const colorsGreen = Color(0xFF58CD52);
    static const colorsGrey = Color(0xFFCCD5E1);
    static const colorsOrange = Color(0xFFFF8E05);
    static const colorsPureBlack = Color(0xFF000000);
    static const colorsRed = Color(0xFFF5483F);
    static const colorsWhite = Color(0xFFFFFFFF);
}",
    },
  },
]
`;

exports[`To Flutter Should generate the color theme with custom file name and custom class name 1`] = `
[
  {
    "name": "custom-colors-file-name.dart",
    "value": {
      "content": "
import 'dart:ui';

class LightTheme {
    LightTheme._();

    static const colorsAccent = Color(0xFF7885B7);
    static const colorsAlmostBlack = Color(0xFF1C1C1C);
    static const colorsBlack = Color(0xFF1E212B);
    static const colorsGreen = Color(0xFF58CD52);
    static const colorsGrey = Color(0xFFCCD5E1);
    static const colorsOrange = Color(0xFFFF8E05);
    static const colorsPureBlack = Color(0xFF000000);
    static const colorsRed = Color(0xFFF5483F);
    static const colorsWhite = Color(0xFFFFFFFF);
}",
    },
  },
]
`;

exports[`To Flutter Should generate the measurement theme with custom file name, class name and ratio 1`] = `
[
  {
    "name": "custom-measurements-file-name.dart",
    "value": {
      "content": "
import 'dart:ui';

class CustomTheme {
    CustomTheme._();

    static const baseSpace01 = 12.00;
    static const baseSpace02 = 24.00;
    static const baseSpace03 = 36.00;
    static const baseSpace04 = 48.00;
    static const baseSpace05 = 96.00;
    static const baseSpace06 = 144.00;
    static const baseSpace07 = 192.00;
    static const baseSpace08 = 240.00;
    static const baseSpace09 = 288.00;
    static const baseSpace10 = 336.00;
}",
    },
  },
  {
    "name": "colors.dart",
    "value": {
      "content": "
import 'dart:ui';

class SpecifyColor {
    SpecifyColor._();

    static const colorsAccent = Color(0xFF7885B7);
    static const colorsAlmostBlack = Color(0xFF1C1C1C);
    static const colorsBlack = Color(0xFF1E212B);
    static const colorsGreen = Color(0xFF58CD52);
    static const colorsGrey = Color(0xFFCCD5E1);
    static const colorsOrange = Color(0xFFFF8E05);
    static const colorsPureBlack = Color(0xFF000000);
    static const colorsRed = Color(0xFFF5483F);
    static const colorsWhite = Color(0xFFFFFFFF);
}",
    },
  },
]
`;
